# verifast

./: .gitignore  .travis.yml  CHANGELOG.md  GNUmakefile  GNUmakefile.settings  GNUmakefile.settings.example  GNUmakefile.settings.local  LICENSE.md  Makefile  README.Linux.md  README.Linux.txt  README.MacOS.md  README.MacOS.txt  README.Windows.md  README.Windows.txt  README.Z3v4.5.md  README.linux.txt  README.md  README.txt  Simplex.ml  VerifastConsole.ml  VerifastIDE.ml  Z3-on-Ubuntu64.txt  Z3.LICENSE.txt  appveyor.yml  build-helper-latest.ml  build-helper.ml  build-with-opam.sh  build.ml  build.sh  config.sh  configure  cv.ml  install-vfdeps.sh  intro-c.md  intro-rust.md  linkedlist.c  linkedlist2.c  make.bat  makeConsole.bat  (+49 more)
src/: .depend  .util.ml.swp  DynType.ml  Fonts_default.ml  Fonts_mac.ml  GNUmakefile  Makefile  Mynum_slow.ml  OCamlExpr.ml  OCamlExprEmitter.ml  Printexc_proxy_310.ml  Printexc_proxy_311.ml  README.txt  SExpressionEmitter.ml  SExpressionEmitter.mli  SExpressions.ml  SExpressions.mli  a.out  arrays.c  arrays.h  assertions.ml  assertions.mli  assume.vfmanifest  ast.ml  ast.mli  atomics.h  combineprovers.ml  counting.h  crt.vfmanifest  dlsymtool.ml  dune  dune-project  explorer.ml  gdk-pixbuf-loaders.cache  generate_vfversion.ml  generated_file_warning.txt  identifier.ml  identifier.mli  java_card_applet.ml  json.ml  (+76 more)
src/branch_png/: branchleft_png.ml  branchright_png.ml  dune
src/cargo_verifast/: cargo_verifast.ml  dune
src/cxx_frontend/: Makefile  Readme.md  annotation_parser.ml  ast_translator.ml  capnp_util.ml  cxx_annotation_parser.ml  cxx_ast_translator.ml  cxx_fe_sig.ml  decl_translator.ml  dune  error.ml  expr_translator.ml  node_translator.ml  reader.ml  sig.ml  stmt_translator.ml  type_translator.ml  var_translator.ml
src/cxx_frontend/ast_exporter/: Annotation.cpp  Annotation.h  AnnotationManager.cpp  AnnotationManager.h  AnnotationStore.cpp  AnnotationStore.h  AstSerializer.cpp  AstSerializer.h  CMakeLists.txt  CommentProcessor.cpp  CommentProcessor.h  Concept.h  ContextFreePPCallbacks.cpp  ContextFreePPCallbacks.h  DeclSerializer.cpp  DeclSerializer.h  DiagnosticCollectorConsumer.h  DiagnosticSerializer.cpp  DiagnosticSerializer.h  Error.cpp  Error.h  ExprSerializer.cpp  ExprSerializer.h  FixedWidthInt.cpp  FixedWidthInt.h  FunctionMangler.cpp  FunctionMangler.h  Inclusion.cpp  Inclusion.h  InclusionContext.cpp  InclusionContext.h  InclusionSerializer.cpp  InclusionSerializer.h  LocUtil.cpp  Location.cpp  Location.h  LocationSerializer.cpp  LocationSerializer.h  NodeListSerializer.h  NodeSerializer.h  (+12 more)
src/cxx_frontend/libtooling/: Annotation.cpp  Annotation.h  AnnotationStore.h  AstSerializer.cpp  AstSerializer.h  CMakeLists.txt  Context.cpp  Context.h  ContextFreePPCallbacks.cpp  ContextFreePPCallbacks.h  DeclSerializer.cpp  ExprSerializer.cpp  Inclusion.h  NodeSerializer.h  Readme.md  StmtSerializer.cpp  TypeSerializer.cpp  VerifastASTExporter.cpp  loc_serializer.h
src/cxx_frontend/stubs/: dune  stubs_ast.capnp  stubs_ast.capnp.c++  stubs_ast.capnp.h  stubs_ast.cmi  stubs_ast.cmx  stubs_ast.ml  stubs_ast.mli
src/cxx_frontend/unix/: cxx_ast_translator.cmi  cxx_ast_translator.cmx  cxx_ast_translator.ml
src/cxx_frontend/windows/: cxx_ast_translator.ml
src/dlsymtool/: dune
src/explorer/: dune  explorer.ml
src/frontend/: ast.ml  ast_aux.ml  dune  lexer.ml  ocaml_aux.ml  ocaml_expr_formatter.ml  ocaml_expr_of_ast.ml  parser.ml  rocq_of_ast.ml  rocq_writer.ml  src_loc_aux.ml  stats.ml  util.ml  verifast0.ml  z.ml  z.mli
src/java_card_applet/: dune
src/java_frontend/: GNUmakefile  annotation_type_checker.ml  annotation_type_checker.mli  ast_reader.ml  ast_translator.ml  ast_writer.ml  communication.ml  dune  general_ast.ml  java_frontend.ml  java_frontend.mli  java_frontend_bridge.ml  main.ml  misc.ml  update.py
src/json/: dune  json.ml
src/json_tests/: dune  json_tests.ml
src/linemarks/: GLineMarks.ml  GtkLineMarks.ml  GtkLineMarks.mli  META  Makefile  README.txt  dune  hello-vala.vala  hello.ml  linemarks.c  linemarks.default.ml  linemarks.fallback.ml  linemarks.h  linemarks.vala  ml_GtkLineMarks.c  mystuff.vapi
src/linemarks/default/: GLineMarks.ml  GtkLineMarks.ml  GtkLineMarks.mli  dune  ml_GtkLineMarks.c
src/linemarks/fallback/: GLineMarks.ml  GSourceView2.ml  dune
src/linux/: GNUmakefile  Perf.ml  Stopwatch.ml  Stopwatch.mli  caml_stopwatch.c  dune
src/macos/: GLineMarks.ml  GSourceView2.ml
src/main_class/: dune  main_class.ml
src/mysh/: dune  mysh.ml
src/perf/: dune  perf.mli  perf.unix.ml  perf.win.ml
src/perf/unix/: dune  perf_unix.ml
src/perf/win/: caml_perf.c  dune  perf_win.ml
src/refinement_checker/: dune  frontend.ml  main.ml  refinement_checker.ml  stringifier.ml
src/rt/: Class.javaspec  Io.javaspec  JavaCard.javaspec  List.javaspec  Lock.javaspec  Nat.javaspec  Object.javaspec  PureList.javaspec  Runnable.javaspec  Semaphore.javaspec  Semaphore_.javaspec  Socket.javaspec  String.javaspec  StringBuffer.javaspec  assume.javaspec  rt.jarspec
src/rt/wrappers/: Semaphore_.java  Thread_.java  compile.bat
src/rust_frontend/: .gitignore  Makefile  Readme.md  dune  ocaml_aux.ml  rust_fe.ml  rust_fe.mli
src/rust_frontend/mir_exporter/: Cargo.toml  build.rs
src/rust_frontend/vf_mir/: dune  vf_mir.capnp
src/rust_frontend/vf_mir_decoder/: dune
src/rust_frontend/vf_mir_exporter/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/rust_frontend/vf_mir_translator/: ast_to_src.ml  decoder_aux.ml  dune  rust_parser.ml  rustbelt.ml  vf_mir_annot_parser.ml  vf_mir_capnp_alias.ml  vf_mir_cpnp_alias.ml  (+2 more)
src/rustc_verifast/: dune  rustc_verifast.ml
src/shape_analysis/: changelog.ml  dune  shape_analysis_backend.ml  shape_analysis_frontend.ml
src/stopwatch/: dune  stopwatch.ml
src/verifast_core/: dune  verifast0.ml
src/vfconfig/: dune
src/vfconsole/: dune  vfconsole.ml
src/vfide/: branchleft_png.ml  branchright_png.ml  dune  vfide.ml
src/vfstrip/: dune
src/win/: GNUmakefile  Perf.ml  Perf.mli  SetErrorMode.ml  Stopwatch.mli  caml_perf.c  caml_seterrormode.c  caml_stopwatch.c
(+2801 files in other folders)
