(rule
 (enabled_if %{bin-available:gdk_pixbuf_mlsource})
 (target branchleft_png.ml)
 (mode fallback)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gdk_pixbuf_mlsource} %{dep:branch-left.png}))))

(rule
 (enabled_if %{bin-available:gdk_pixbuf_mlsource})
 (target branchright_png.ml)
 (mode fallback)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gdk_pixbuf_mlsource} %{dep:branch-right.png}))))

(library
 (optional)
 (name branch_png)
 (libraries lablgtk2))
