(library
 (name cxx_frontend_stubs)
 (libraries stdint capnp capnp.unix)
 (flags (:standard -w -55)) ; -55: inlining impossible
 (wrapped false))
(rule
 (targets stubs_ast.mli stubs_ast.ml)
 (deps (:schema stubs_ast.capnp))
 (action (run capnp compile -I %{env:CAPNP_INCLUDE=CAPNP_INCLUDE} -o ocaml %{schema})))
