(copy_files vala/linemarks.{c,h})

(library
 ;; Optional: only available if lablgtk2 and lablgtk2.sourceview2 are present
 (optional)
 (name linemarks_default)
 (libraries lablgtk2 lablgtk2.sourceview2)
 ; Pass flags to c compiler when constructing the library
 ; archive file for the C stubs. E.g. to pass -lbar to the linker.
 (c_library_flags
  (:standard
   (:include flags/linemarks_lflags.sexp)))
 (foreign_stubs
  (language c)
  (flags
   (:standard -w)
   (:include flags/linemarks_cflags.sexp))
  (names linemarks ml_GtkLineMarks)))
