[package]
name = "vf_mir_exporter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.14.5"
tracing = {version = "0.1.33", features = ["max_level_trace", "release_max_level_warn"]}
tracing-subscriber = "0.3.11"
# Todo: This is temporary as the log 0.4.20 build fails
log = "=0.4.18"

[build-dependencies]
capnpc = "0.14.7"
