[package]
name = "vf_mir_exporter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = { path = "capnproto-rust/capnp" }
tracing = {version = "0.1.33", features = ["max_level_trace", "release_max_level_warn"]}
tracing-subscriber = "0.3.17"
log = "0.4.18"

[build-dependencies]
capnpc = { path = "capnproto-rust/capnpc" }

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true
